Update favicon and PWA configuration
- Replaced the favicon and apple-touch-icon in `index.html` with `break-the-iceberg.png` for improved branding.
- Updated `vite.config.ts` to include the new image in the PWA assets and manifest icons, ensuring consistency across the application.
- Removed the obsolete `favicon.svg` file to streamline the asset management.

These changes enhance the visual identity of the application and ensure proper PWA functionality.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0a0f1e" />
     <meta name="description" content="A quick way to break the ice in any social situation" />
-    <link rel="icon" type="image/ico" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+    <link rel="icon" type="image/png" href="/break-the-iceberg.png" />
+    <link rel="apple-touch-icon" href="/break-the-iceberg.png" />
     <link rel="stylesheet" href="/src/index.css" />
 
     <title>Break the Ice(berg)</title>
